feat(部署): 预检开发引擎需求
